# Code-Review-Agent

./: .gitignore  README.md  app.py  build.bat  build.sh  code_review_agent.spec  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_parsing.py
.github/workflows/: build-release.yml  ci.yml
agents/: __init__.py  graph.py  prompts.py
assets/: README.md
models/: __init__.py  schemas.py
tests/: conftest.py  test_executor.py  test_linter.py  test_parsing.py
tools/: __init__.py  executor.py  linter.py
ui/: __init__.py  components.py
utils/: __init__.py  helpers.py
